--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,13 +11,30 @@
 
     	{% from "govuk/components/table/macro.njk" import govukTable %}
 
+      {% from "govuk/components/breadcrumbs/macro.njk" import govukBreadcrumbs %}
 
-<h1 class="govuk-heading-xl govuk-!-margin-bottom-2">Contact us with a concern about a Child or Young Person</h1>
+{{ govukBreadcrumbs({
+  items: [
+    {
+      text: "Home",
+      href: "#"
+    },
+    {
+      text: "Children young people and families",
+      href: "#"
+    },
+    {
+      text: "Are you concerned about a child or young person"
+    }
+  ]
+}) }}
+
+<h1 class="govuk-heading-xl govuk-!-margin-bottom-6 govuk-!-margin-top-6">Contact us with a concern about a child or young person</h1>
 <p class="govuk-body">This form is for anyone who has a concern about a child or young person.</p>
 
 <p class="govuk-body">By filling in this form you’ll be helping us decide what kind of support is most appropriate for the child, young person or family.</p>
 
-<div class="breakout-box">
+<div class="breakout-box govuk-!-margin-bottom-6 govuk-!-margin-top-6">
 
   {% from "govuk/components/warning-text/macro.njk" import govukWarningText %}
   {{ govukWarningText({
@@ -30,7 +47,7 @@
 
 
 
-<h2 class="govuk-heading-l">Before you start</h2>
+<h2 class="govuk-heading-l govuk-!-margin-top-6">Before you start</h2>
 
 <p class="govuk-body">Make sure that the child is living in Bath and North East Somerset. You can do this by <a href ='https://www.gov.uk/find-local-council'>finding their local council</a>.</p>
 
@@ -56,6 +73,7 @@
 {{ govukButton({
   text: "Start now",
   href: "your_relationship.html",
+  classes: "govuk-!-margin-top-6",
   isStartButton: true
 }) }}
       
