updated significant harm

--- a/app/views/significant_harm.html
+++ b/app/views/significant_harm.html
@@ -51,8 +51,7 @@ GOV.UK Prototype Kit
             </label>
 
             <span id="significant-harm-2-hint" class="govuk-hint govuk-checkboxes__hint">
-              The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on
-              the child’s emotional development.
+                A form of abuse which may involve hitting, shaking, throwing, poisoning, burning or scalding, drowning, suffocating or otherwise causing physical harm to a child.
             </span>
 
           </div>
@@ -66,8 +65,7 @@ GOV.UK Prototype Kit
             </label>
 
             <span id="significant-harm-3-hint" class="govuk-hint govuk-checkboxes__hint">
-              The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on
-              the child’s emotional development.
+                Involves forcing or enticing a child or young person to take part in sexual activities, not necessarily involving a high level of violence, whether or not the child is aware of what is happening.
             </span>
 
           </div>
@@ -81,8 +79,7 @@ GOV.UK Prototype Kit
             </label>
 
             <span id="significant-harm-4-hint" class="govuk-hint govuk-checkboxes__hint">
-              The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on
-              the child’s emotional development.
+                The persistent failure to meet a child’s basic physical and/or psychological needs, likely to result in the serious impairment of the child’s health or development.
             </span>
 
           </div>
@@ -101,8 +98,7 @@ GOV.UK Prototype Kit
             </label>
 
             <span id="significant-harm-5-hint" class="govuk-hint govuk-checkboxes__hint">
-              The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on
-              the child’s emotional development.
+                A form of child sexual abuse. It occurs where an individual or group takes advantage of an imbalance of power to coerce, manipulate or deceive a child or young person under the age of 18 into sexual activity
             </span>
 
           </div>
@@ -116,8 +112,7 @@ GOV.UK Prototype Kit
             </label>
 
             <span id="significant-harm-6-hint" class="govuk-hint govuk-checkboxes__hint">
-              The persistent emotional maltreatment of a child such as to cause severe and persistent adverse effects on
-              the child’s emotional development.
+                Radicalisation is defined as the process by which people come to support terrorism and extremism and, in some cases, to then participate in terrorist groups
             </span>
 
           </div>
