--- a/app/views/impact_food.html
+++ b/app/views/impact_food.html
@@ -34,20 +34,20 @@ GOV.UK Prototype Kit
   },
   items: [
     {
-      value: "impact-malnourishment-ill-health",
+      value: "level2",
       text: "Potential for malnourishment and ill health as consistency of diet not maintained."
     },
     {
-      value: "impact-carer-prepatation-of-meals",
+      value: "level3",
       text: "Carer continues to be inconsistent in preparation of meals, child’s
       weight not maintained or growing concerns for obesity. Specialist diets not maintained and so impacting on health"
     },
     {
-      value: "impact-child-weight-loses",
+      value: "level4",
       text: "Child loses weight, unable to concentrate at school/college, clothes are increasingly ill-fitting. Health affected by inappropriate diet"
     },
     {
-      value: "imapct-acute-intensive-care",
+      value: "level5",
       text: "Child requires acute intensive care and clear that the child has suffered significant harm and is at risk of further harm"
     }
   ]
