--- a/app/views/impact_hygiene.html
+++ b/app/views/impact_hygiene.html
@@ -20,11 +20,11 @@ GOV.UK Prototype Kit
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 {{ govukRadios({
-  idPrefix: "impact",
-  name: "food",
+  idPrefix: "impact_hygiene",
+  name: "impact_hygiene",
   fieldset: {
     legend: {
-      text: "Food (1 of 3 concerns you identified)",
+      text: "Hygiene (1 of 3 concerns you identified)",
       isPageHeading: true,
       classes: "govuk-fieldset__legend--m"
     }
@@ -35,20 +35,19 @@ GOV.UK Prototype Kit
   items: [
     {
       value: "level2",
-      text: "Potential for malnourishment and ill health as consistency of diet not maintained."
+      text: "Child is dirty and smelly, teeth are rotting and lead to loss of teeth and increased risk of disease."
     },
     {
       value: "level3",
-      text: "Carer continues to be inconsistent in preparation of meals, child’s
-      weight not maintained or growing concerns for obesity. Specialist diets not maintained and so impacting on health"
+      text: "Children are increasingly dishevelled, recurrent bouts of head lice and skin conditions. Teeth are rotting and refuse to attend the dentist, or make false claims about doing so."
     },
     {
       value: "level4",
-      text: "Child loses weight, unable to concentrate at school/college, clothes are increasingly ill-fitting. Health affected by inappropriate diet"
+      text: "Child bullied at school/college, self-worth and self –esteem impacted on impacted on negatively. Clothes and hair smell, dental decay."
     },
     {
       value: "level5",
-      text: "Child requires acute intensive care and clear that the child has suffered significant harm and is at risk of further harm"
+      text: "Potential for new born baby to become seriously unwell.Child has to have significant numbers of teeth removed. Teased because no longer able to speak properly. Loses weight as unable to eat. Increasingly negative impact on emotional health leading to self-harm, risk of being groomed."
     }
   ]
 }) }}
