--- a/app/views/impact_care_by_other_adults.html
+++ b/app/views/impact_care_by_other_adults.html
@@ -20,11 +20,11 @@ GOV.UK Prototype Kit
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 {{ govukRadios({
-  idPrefix: "impact",
-  name: "food",
+  idPrefix: "impact-care-by-other-adults",
+  name: "impact-care-by-other-adults",
   fieldset: {
     legend: {
-      text: "Food (1 of 3 concerns you identified)",
+      text: "Care by other adults (1 of 3 concerns you identified)",
       isPageHeading: true,
       classes: "govuk-fieldset__legend--m"
     }
@@ -35,20 +35,20 @@ GOV.UK Prototype Kit
   items: [
     {
       value: "level2",
-      text: "Potential for malnourishment and ill health as consistency of diet not maintained."
+      text: "Increased likelihood of harm to child. Raised awareness of the impact at developmental ages of care needs to ensure baby safe and needs are met."
     },
     {
       value: "level3",
-      text: "Carer continues to be inconsistent in preparation of meals, child’s
-      weight not maintained or growing concerns for obesity. Specialist diets not maintained and so impacting on health"
+      text: "Increased likelihood of harm to child. Raised awareness of the impact at developmental ages of care needs to ensure baby safe and needs are met."
     },
     {
       value: "level4",
-      text: "Child loses weight, unable to concentrate at school/college, clothes are increasingly ill-fitting. Health affected by inappropriate diet"
+      text: "Child is at risk of harm by others, may be at risk of physical or sexual
+      harm. Child feels must accept situation as carer has left them with the person who is trusted by their carers."
     },
     {
       value: "level5",
-      text: "Child requires acute intensive care and clear that the child has suffered significant harm and is at risk of further harm"
+      text: "Child discloses significant harm."
     }
   ]
 }) }}
