--- a/app/views/impact_physical_abuse.html
+++ b/app/views/impact_physical_abuse.html
@@ -20,11 +20,11 @@ GOV.UK Prototype Kit
 {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
 {{ govukRadios({
-  idPrefix: "impact",
-  name: "food",
+  idPrefix: "imapct-physical-abuse",
+  name: "imapct-physical-abuse",
   fieldset: {
     legend: {
-      text: "Food (1 of 3 concerns you identified)",
+      text: "Physical Abuse (1 of 3 concerns you identified)",
       isPageHeading: true,
       classes: "govuk-fieldset__legend--m"
     }
@@ -35,20 +35,20 @@ GOV.UK Prototype Kit
   items: [
     {
       value: "level2",
-      text: "Potential for malnourishment and ill health as consistency of diet not maintained."
+      text: "Fearful of parents, noticed to have animal / insect bites, aggressive
+      behaviour at school/college/play school"
     },
     {
       value: "level3",
-      text: "Carer continues to be inconsistent in preparation of meals, child’s
-      weight not maintained or growing concerns for obesity. Specialist diets not maintained and so impacting on health"
+      text: "Fearful of parents, repeated disclosures by child with no evidence appears to mirror adult behaviour in the playground. Injuries as a result of being exposed to harmful substances."
     },
     {
       value: "level4",
-      text: "Child loses weight, unable to concentrate at school/college, clothes are increasingly ill-fitting. Health affected by inappropriate diet"
+      text: "Child or young person exhibits angry behaviour, peer to peer abuse or sibling abuse. Child or young person fearful, self-harm, expressing suicidal ideation."
     },
     {
       value: "level5",
-      text: "Child requires acute intensive care and clear that the child has suffered significant harm and is at risk of further harm"
+      text: "Child or young person exhibits angry behaviour, peer to peer abuse or sibling abuse. Child or young person fearful , self- harm, expressing suicidal ideation and or taking overdoses, drinking excessively, substance misuse, injuries from drug paraphernalia; increasingly withdrawn, or extreme behaviours."
     }
   ]
 }) }}
