--- a/app/views/impact_food.html
+++ b/app/views/impact_food.html
@@ -20,8 +20,8 @@ GOV.UK Prototype Kit
       {% from "govuk/components/radios/macro.njk" import govukRadios %}
 
       {{ govukRadios({
-  idPrefix: "impact",
-  name: "food",
+  idPrefix: "impact_food",
+  name: "impact_food",
   fieldset: {
     legend: {
       text: "Food (1 of 3 concerns you identified)",
